crrecting Github acc

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h2>Contact Info</h2>
                         <ul id="list">
                             <li><strong>Email:</strong><a href="https://venjavanapkk@gmail.com">My email</a></li>
-                            <li><strong>Github</strong><a href=" https://javana-bhikkhu.github.io/solved3/">My Github acc</a></li>
+                            <li><strong>Github</strong><a href=" https://javana-bhikkhu.github.io/Portfolio/">My Github acc</a></li>
                             <li><strong>social Media</strong><a href="https://www.facebook.com/profile.php?id=100049507419250&mibextid=ZbWKwL">My FB acc</a></li>
 
                         </ul><br>
